--- a/web4test/src/main/webapp/edit/css/Edit.css
+++ b/web4test/src/main/webapp/edit/css/Edit.css
@@ -402,6 +402,32 @@ body > div.page-wrapper > div.sidebar > div.primary > button.button.preview {
   margin : 0;
 
 }
+
+.toolbar .text-list .toolbar-color .toolbar-color-trigger .back-colorinput{
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding : 0;
+  margin : 0;
+
+}
+
+.toolbar .text-list .toolbar-color .toolbar-color-trigger .text-colorinput{
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding : 0;
+  margin : 0;
+
+}
+.toolbar .text-list .toolbar-color .toolbar-color-trigger .text-border-colorinput{
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding : 0;
+  margin : 0;
+
+}
 .toolbar .text-list .toolbar-color-trigger .toolbar-color-reset {
   position: absolute;
   right: 0;
@@ -595,6 +621,21 @@ body > div.page-wrapper > div.sidebar > div.primary > button.button.preview {
   background: #4e4e4e;
   border: 1px solid #292929;
   cursor: col-resize;
+}
+
+ .toolbar-panel {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-left: 9px;
+  color: #222;
+  background-color: #eee;
+  font-size: 14px;
+  z-index: 2;
+  box-shadow: 0px 2px 10px rgba(0,0,0,0.3);
+  width: 144px;
+  left: 157px;
+  top: 496px;
 }
 /* image */
 .toolbars .toolbar .image-list {
