--- a/web4test/src/main/webapp/edit/css/Edit.css
+++ b/web4test/src/main/webapp/edit/css/Edit.css
@@ -1022,3 +1022,37 @@ div.nav-item{
   cursor: pointer;
   background: #222;
 }
+
+/*TEXT 편집창*/
+/* 텍스트 폰트 수정 창*/
+.size-box{
+position : absolute;
+width : 142px;
+height : 28px;
+left : 100;
+top : 100;
+z-index : 1;
+}
+
+input[type="number"].font{
+font-size: 18px;
+}
+
+input[type="number"].opacity{
+font-size: 15px;
+}
+
+input[type="number"].padding{
+font-size: 15px;
+}
+.size-scroll{
+position : absolute;
+width : 142px;
+height : 28px;
+left : 100;
+top : 100;
+opacity : 0.00;
+z-index : 2;
+cursor: col-resize;
+}
+/**/
