--- a/web4test/src/main/webapp/edit/css/Edit00.css
+++ b/web4test/src/main/webapp/edit/css/Edit00.css
@@ -366,8 +366,8 @@ body > div.page-wrapper > div.sidebar > div.primary > button.button.preview {
 }
  
 .toolbar .text-list .toolbar-divider {
-
-  height: 1px;
+  margin-top: 10px;
+  height: 3px;
   width: 100%;
   padding: 0;
   background-color: #444;
@@ -420,7 +420,14 @@ body > div.page-wrapper > div.sidebar > div.primary > button.button.preview {
   margin : 0;
 
 }
+.toolbar .text-list .toolbar-color .toolbar-color-trigger .text-border-colorinput{
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding : 0;
+  margin : 0;
 
+}
 .toolbar .text-list .toolbar-color-trigger .toolbar-color-reset {
   position: absolute;
   right: 0;
@@ -530,6 +537,7 @@ body > div.page-wrapper > div.sidebar > div.primary > button.button.preview {
 }
 
 .toolbar .text-list .toolbar-group .toolbar-group-options {
+  height:0px;
   position: relative;
   background: #3f3f3f;
   margin-left: -12px;
@@ -576,7 +584,6 @@ body > div.page-wrapper > div.sidebar > div.primary > button.button.preview {
   border: 1px solid #292929;
   box-shadow: none;
   cursor: pointer;
-  background:red;
   background-repeat: no-repeat;
   background-position: right 50%;
   -webkit-transition: opacity 0.15s ease;
@@ -614,6 +621,44 @@ body > div.page-wrapper > div.sidebar > div.primary > button.button.preview {
   background: #4e4e4e;
   border: 1px solid #292929;
   cursor: col-resize;
+}
+
+ .text-toolbar-panel {
+  position: absolute;
+  top: 395px;
+  left: 145px;
+  margin-left: 9px;
+  color: #ffffff;
+  background: #4e4e4e;
+  font-size: 14px;
+  z-index: 2;
+  box-shadow: 0px 2px 10px rgba(0,0,0,0.3);
+  width: 100px;
+  visibility: hidden;
+}
+
+.text-toolbar-panel .toolbar-select-item1 {
+  min-height: 30px;
+  line-height: 28px;
+  padding: 0 10px;
+  cursor: pointer;
+  border: 1px solid transparent;
+}
+
+.text-toolbar-panel .toolbar-select-item2 {
+  min-height: 30px;
+  line-height: 28px;
+  padding: 0 10px;
+  cursor: pointer;
+  border: 1px solid transparent;
+}
+
+.text-toolbar-panel .toolbar-select-item3 {
+  min-height: 30px;
+  line-height: 28px;
+  padding: 0 10px;
+  cursor: pointer;
+  border: 1px solid transparent;
 }
 /* image */
 .toolbars .toolbar .image-list {
@@ -755,6 +800,7 @@ body > div.page-wrapper > div.sidebar > div.primary > button.button.preview {
   vertical-align: top;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
+
 
 /*  ****  */
 
@@ -977,3 +1023,37 @@ div.nav-item{
   cursor: pointer;
   background: #222;
 }
+
+/*TEXT 편집창*/
+/* 텍스트 폰트 수정 창*/
+.size-box{
+position : absolute;
+width : 142px;
+height : 28px;
+left : 100;
+top : 100;
+z-index : 1;
+}
+
+input[type="number"].font{
+font-size: 18px;
+}
+
+input[type="number"].opacity{
+font-size: 15px;
+}
+
+input[type="number"].padding{
+font-size: 15px;
+}
+.size-scroll{
+position : absolute;
+width : 142px;
+height : 28px;
+left : 100;
+top : 100;
+opacity : 0.00;
+z-index : 2;
+cursor: col-resize;
+}
+/**/
