--- a/web4test/src/main/webapp/edit/css/Edit00.css
+++ b/web4test/src/main/webapp/edit/css/Edit00.css
@@ -508,7 +508,7 @@ body > div.page-wrapper > div.sidebar > div.primary > button.button.preview {
   margin-bottom: 15px;
 }
 
-.toolbar .text-list .toolbar-group .toolbar-group-trigger {
+.toolbar .text-list .toolbar-group .text-toolbar-group-trigger {
   width: 100%;
   height: 30px;
   line-height: 28px;
@@ -519,11 +519,11 @@ body > div.page-wrapper > div.sidebar > div.primary > button.button.preview {
   clear: both;
 }
 
-.toolbar .text-list .toolbar-group .toolbar-group-trigger .label {
+.toolbar .text-list .toolbar-group .text-toolbar-group-trigger .label {
   float: left;
 }
 
-.toolbar .text-list .toolbar-group .toolbar-group-trigger .checkbox {
+.toolbar .text-list .toolbar-group .text-toolbar-group-trigger .checkbox {
   position: relative;
   width: 16px;
   height: 16px;
@@ -536,7 +536,7 @@ body > div.page-wrapper > div.sidebar > div.primary > button.button.preview {
   color: rgba(0,0,0,0);
 }
 
-.toolbar .text-list .toolbar-group .toolbar-group-options {
+.toolbar .text-list .toolbar-group .text-toolbar-group-options {
   height:0px;
   position: relative;
   background: #3f3f3f;
@@ -549,7 +549,7 @@ body > div.page-wrapper > div.sidebar > div.primary > button.button.preview {
   transition: all 0.3s cubic-bezier(0.3, 0.9, 0.135, 1);
 }
 
-.toolbar .text-list .toolbar-group .toolbar-group-options-inner {
+.toolbar .text-list .toolbar-group .text-toolbar-group-options-inner {
   border-top: 1px solid #292929;
   border-bottom: 1px solid #292929;
   padding: 12px 12px 0 12px;
