--- a/web4test/src/main/webapp/test/css/test03.css
+++ b/web4test/src/main/webapp/test/css/test03.css
@@ -439,7 +439,7 @@ a, button, .sl-select, .sl-checkbox label, .radio label {
   outline: none !important;
 }
 
-body > div.canvas > div.sl-block-content.isFocus > div {
+.sl-block.isFocus > .sl-block-content {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -578,5 +578,5 @@ section {
 	
 }
 .sl-block {
-  border: red solid 1px;
+  /*border: red solid 1px;*/
 }
