--- a/web4test/src/main/webapp/edit/css/Edit.css
+++ b/web4test/src/main/webapp/edit/css/Edit.css
@@ -242,11 +242,49 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 	-ms-overflow-style: -ms-autohiding-scrollbar;
 }
 
-.sidebar .secondary .button:not (.active ):not (:hover ) {
-	-webkit-transition: opacity 0.5s ease;
-	transition: opacity 0.5s ease;
-}
+.sidebar
+ 
+.secondary
+ 
+.button
+:not
+ 
+(
+.active
+ 
+)
+:not
+ 
+(
+:hover
+ 
+)
+{
+-webkit-transition
+:
+ 
+opacity
+ 
+0
+.5s
+ 
+ease
+;
 
+	
+transition
+:
+ 
+opacity
+ 
+0
+.5s
+ 
+ease
+;
+
+
+}
 .sidebar .secondary .button+.button {
 	border-top: 1px solid #2a2a2a;
 }
@@ -380,6 +418,20 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 }
 
 /* text */
+.toolbar .text-list .toolbar-group .text-toolbar-group-trigger .checkbox
+	{
+	position: relative;
+	width: 16px;
+	height: 16px;
+	top: 6px;
+	border: 1px solid #555;
+	text-align: center;
+	font-size: 14px;
+	line-height: 0.8;
+	float: right;
+	color: white;
+}
+
 .toolbars .toolbar .text-list {
 	position: absolute;
 	visibility: hidden;
@@ -428,6 +480,7 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 	height: 100%;
 	padding: 0;
 	margin: 0;
+	cursor: pointer;
 }
 
 .toolbar .text-list .toolbar-color .toolbar-color-trigger .back-colorinput
@@ -437,6 +490,7 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 	height: 100%;
 	padding: 0;
 	margin: 0;
+	cursor: pointer;
 }
 
 .toolbar .text-list .toolbar-color .toolbar-color-trigger .text-colorinput
@@ -446,6 +500,7 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 	height: 100%;
 	padding: 0;
 	margin: 0;
+	cursor: pointer;
 }
 
 .toolbar .text-list .toolbar-color .toolbar-color-trigger .text-border-colorinput
@@ -455,6 +510,7 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 	height: 100%;
 	padding: 0;
 	margin: 0;
+	cursor: pointer;
 }
 
 .toolbar .text-list .toolbar-color-trigger .toolbar-color-reset {
@@ -691,6 +747,20 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 }
 
 /* image */
+.toolbar .image-list .toolbar-group .text-toolbar-group-trigger .checkbox
+	{
+	position: relative;
+	width: 16px;
+	height: 16px;
+	top: 6px;
+	border: 1px solid #555;
+	text-align: center;
+	font-size: 14px;
+	line-height: 0.8;
+	float: right;
+	color: white;
+}
+
 .toolbars .toolbar .image-list {
 	position: absolute;
 	visibility: hidden;
@@ -739,6 +809,7 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 	height: 100%;
 	padding: 0;
 	margin: 0;
+	cursor: pointer;
 }
 
 .toolbar .image-list .toolbar-color .toolbar-color-trigger .back-colorinput
@@ -748,6 +819,7 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 	height: 100%;
 	padding: 0;
 	margin: 0;
+	cursor: pointer;
 }
 
 .toolbar .image-list .toolbar-color .toolbar-color-trigger .image-colorinput
@@ -757,6 +829,7 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 	height: 100%;
 	padding: 0;
 	margin: 0;
+	cursor: pointer;
 }
 
 .toolbar .image-list .toolbar-color .toolbar-color-trigger .image-border-colorinput
@@ -766,6 +839,7 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 	height: 100%;
 	padding: 0;
 	margin: 0;
+	cursor: pointer;
 }
 
 .toolbar .image-list .toolbar-color-trigger .toolbar-color-reset {
@@ -1003,6 +1077,20 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 }
 
 /* shape */
+.toolbar .shape-list .toolbar-group .text-toolbar-group-trigger .checkbox
+	{
+	position: relative;
+	width: 16px;
+	height: 16px;
+	top: 6px;
+	border: 1px solid #555;
+	text-align: center;
+	font-size: 14px;
+	line-height: 0.8;
+	float: right;
+	color: white;
+}
+
 .toolbars .toolbar .shape-list {
 	position: absolute;
 	visibility: hidden;
@@ -1051,6 +1139,7 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 	height: 100%;
 	padding: 0;
 	margin: 0;
+	cursor: pointer;
 }
 
 .toolbar .shape-list .toolbar-color .toolbar-color-trigger .back-colorinput
@@ -1060,6 +1149,7 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 	height: 100%;
 	padding: 0;
 	margin: 0;
+	cursor: pointer;
 }
 
 .toolbar .shape-list .toolbar-color .toolbar-color-trigger .shape-colorinput
@@ -1069,6 +1159,7 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 	height: 100%;
 	padding: 0;
 	margin: 0;
+	cursor: pointer;
 }
 
 .toolbar .shape-list .toolbar-color .toolbar-color-trigger .shape-border-colorinput
@@ -1078,6 +1169,7 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 	height: 100%;
 	padding: 0;
 	margin: 0;
+	cursor: pointer;
 }
 
 .toolbar .shape-list .toolbar-color-trigger .toolbar-color-reset {
@@ -1143,19 +1235,6 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 	cursor: col-resize;
 }
 
-.toolbar .shape-list .toolbar-stepper .stepper .stepper-number {
-	width: 100%;
-	height: 28px;
-	line-height: 28px;
-	padding: 0 6px;
-	color: #fff;
-	background: transparent;
-	border: 0;
-	outline: 0;
-	outline-offset: 0;
-	cursor: col-resize;
-}
-
 .toolbar .shape-list .toolbar-group {
 	margin-bottom: 15px;
 }
@@ -1176,12 +1255,28 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 	float: left;
 }
 
-.toolbar .shape-list .toolbar-group .shape-toolbar-group-trigger .checkbox
+.toolbar .shape-list .toolbar-group .shape-toolbar-group-trigger-border
 	{
+	width: 100%;
+	height: 30px;
+	line-height: 28px;
+	color: #ddd;
+	font-size: 11px;
+	shape-transform: uppercase;
+	cursor: pointer;
+	clear: both;
+}
+
+.toolbar .shape-list .toolbar-group .shape-toolbar-group-trigger-border .label
+	{
+	float: left;
+}
+
+.toolbar .shape-list .shape-checkbox {
 	position: relative;
 	width: 16px;
 	height: 16px;
-	top: 6px;
+	top: 0px;
 	border: 1px solid #555;
 	shape-align: center;
 	font-size: 14px;
@@ -1190,7 +1285,37 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 	color: rgba(0, 0, 0, 0);
 }
 
-.toolbar .shape-list .toolbar-group .shape-toolbar-group-options {
+.toolbar .shape-list .toolbar-group .shape-toolbar-group-trigger-link {
+	width: 100%;
+	height: 30px;
+	line-height: 28px;
+	color: #ddd;
+	font-size: 11px;
+	shape-transform: uppercase;
+	cursor: pointer;
+	clear: both;
+}
+
+.toolbar .shape-list .toolbar-group .shape-toolbar-group-trigger-link .label
+	{
+	float: left;
+}
+
+.toolbar .shape-list .toolbar-group .shape-toolbar-group-options-border
+	{
+	height: 0px;
+	position: relative;
+	background: #3f3f3f;
+	margin-left: -12px;
+	width: 168px;
+	visibility: hidden;
+	overflow: hidden;
+	opacity: 0;
+	-webkit-transition: all 0.3s cubic-bezier(0.3, 0.9, 0.135, 1);
+	transition: all 0.3s cubic-bezier(0.3, 0.9, 0.135, 1);
+}
+
+.toolbar .shape-list .toolbar-group .shape-toolbar-group-options-link {
 	height: 0px;
 	position: relative;
 	background: #3f3f3f;
@@ -1278,43 +1403,71 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 
 .shape-toolbar-panel {
 	position: absolute;
-	top: 395px;
-	left: 145px;
+	top: 5px;
+	left: 150px;
 	margin-left: 9px;
-	color: #ffffff;
-	background: #4e4e4e;
+	color: #222;
+	background-color: #eee;
 	font-size: 14px;
 	z-index: 2;
 	box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
-	width: 100px;
+	display: block;
+	overflow-y: auto;
 	visibility: hidden;
 }
 
-.shape-toolbar-panel .shape-toolbar-select-item1 {
-	min-height: 30px;
-	line-height: 28px;
-	padding: 0 10px;
+.shape-toolbar-panel .toolbar-panel-content {
+	overflow: auto;
+	padding: 1px;
+	-webkit-overflow-scrolling: touch;
+}
+
+.shape-toolbar-panel .toolbar-select-item {
+	display: inline-block;
+	width: 24px;
+	height: 31px;
+	margin : 10px;
+	padding: 14px;
 	cursor: pointer;
 	border: 1px solid transparent;
 }
 
-.shape-toolbar-panel .shape-toolbar-select-item2 {
-	min-height: 30px;
-	line-height: 28px;
-	padding: 0 10px;
+.shape-toolbar-panel .toolbar-select-item.selected {
+	display: inline-block;
+	width: 24px;
+	height: 31px;
+	margin : 10px;
+	padding: 14px;
 	cursor: pointer;
 	border: 1px solid transparent;
 }
 
-.shape-toolbar-panel .shape-toolbar-select-item3 {
-	min-height: 30px;
-	line-height: 28px;
-	padding: 0 10px;
-	cursor: pointer;
-	border: 1px solid transparent;
+.shape-list .toolbar-select-trigger {
+	width: 100%;
+	height: auto;
+	padding: 15px;
+	line-height: 1;
+	text-align: center;
+	background-color: #444;
+	background-image: #444;
+	cursor : pointer;
 }
 
 /* iframe */
+.toolbar .iframe-list .toolbar-group .text-toolbar-group-trigger .checkbox
+	{
+	position: relative;
+	width: 16px;
+	height: 16px;
+	top: 6px;
+	border: 1px solid #555;
+	text-align: center;
+	font-size: 14px;
+	line-height: 0.8;
+	float: right;
+	color: white;
+}
+
 .toolbars .toolbar .iframe-list {
 	position: absolute;
 	visibility: hidden;
@@ -1364,6 +1517,7 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 	height: 100%;
 	padding: 0;
 	margin: 0;
+	cursor: pointer;
 }
 
 .toolbar .iframe-list .toolbar-color .toolbar-color-trigger .back-colorinput
@@ -1373,6 +1527,7 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 	height: 100%;
 	padding: 0;
 	margin: 0;
+	cursor: pointer;
 }
 
 .toolbar .iframe-list .toolbar-color .toolbar-color-trigger .iframe-colorinput
@@ -1382,6 +1537,7 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 	height: 100%;
 	padding: 0;
 	margin: 0;
+	cursor: pointer;
 }
 
 .toolbar .iframe-list .toolbar-color .toolbar-color-trigger .iframe-border-colorinput
@@ -1391,6 +1547,7 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 	height: 100%;
 	padding: 0;
 	margin: 0;
+	cursor: pointer;
 }
 
 .toolbar .iframe-list .toolbar-color-trigger .toolbar-color-reset {
@@ -1629,8 +1786,21 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 	border: 1px solid transparent;
 }
 
-ß
-/* math */
+ß /* math */ 
+.toolbar . math-list .toolbar-group .text-toolbar-group-trigger .checkbox
+	{
+	position: relative;
+	width: 16px;
+	height: 16px;
+	top: 6px;
+	border: 1px solid #555;
+	text-align: center;
+	font-size: 14px;
+	line-height: 0.8;
+	float: right;
+	color: white;
+}
+
 .toolbars .toolbar .math-list {
 	position: absolute;
 	visibility: hidden;
@@ -1679,6 +1849,7 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 	height: 100%;
 	padding: 0;
 	margin: 0;
+	cursor: pointer;
 }
 
 .toolbar .math-list .toolbar-color .toolbar-color-trigger .back-colorinput
@@ -1688,6 +1859,7 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 	height: 100%;
 	padding: 0;
 	margin: 0;
+	cursor: pointer;
 }
 
 .toolbar .math-list .toolbar-color .toolbar-color-trigger .math-colorinput
@@ -1697,6 +1869,7 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 	height: 100%;
 	padding: 0;
 	margin: 0;
+	cursor: pointer;
 }
 
 .toolbar .math-list .toolbar-color .toolbar-color-trigger .math-border-colorinput
@@ -1706,6 +1879,7 @@ body>div.page-wrapper>div.sidebar>div.primary>button.button.preview {
 	height: 100%;
 	padding: 0;
 	margin: 0;
+	cursor: pointer;
 }
 
 .toolbar .math-list .toolbar-color-trigger .toolbar-color-reset {
