--- a/web4test/src/main/webapp/pro/css/Edit.css
+++ b/web4test/src/main/webapp/pro/css/Edit.css
@@ -2249,6 +2249,18 @@ body>div.canvas>div.sl-block-content.isFocus>div {
     font-size: 12px;
 }
 
+/* isFocus 박스  */
+.sl-block-transform.editing-ui {
+	position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 255;
+  border: 1px solid #1baee1;
+  font-size: 12px;
+}
+
 .editing-ui>.anchor {
     position: absolute;
     width: 0.8em;
@@ -2388,10 +2400,6 @@ div.sl-block-content.isFocus {
 }
 
 section {
-    border: red solid 1px;
-}
-
-.sl-block {
     border: red solid 1px;
 }
 
