--- a/web4test/src/main/webapp/pro/css/Edit.css
+++ b/web4test/src/main/webapp/pro/css/Edit.css
@@ -1706,8 +1706,7 @@ ease
 	cursor: pointer;
 }
 
-.toolbar .iframe-list .toolbar-color .toolbar-color-trigger .colorinput
-	{
+.toolbar .iframe-list .toolbar-color .toolbar-color-trigger .colorinput {
 	position: relative;
 	width: 100%;
 	height: 100%;
@@ -1757,8 +1756,7 @@ ease
 	background-color: rgba(0, 0, 0, 0.2);
 }
 
-.toolbar .iframe-list .toolbar-color .toolbar-color-trigger.transparent
-	{
+.toolbar .iframe-list .toolbar-color .toolbar-color-trigger.transparent {
 	background: blue;
 	background-repeat: repeat;
 }
@@ -1810,19 +1808,6 @@ ease
 	cursor: col-resize;
 }
 
-.toolbar .iframe-list .toolbar-stepper .stepper .stepper-number {
-	width: 100%;
-	height: 28px;
-	line-height: 28px;
-	padding: 0 6px;
-	color: #fff;
-	background: transparent;
-	border: 0;
-	outline: 0;
-	outline-offset: 0;
-	cursor: col-resize;
-}
-
 .toolbar .iframe-list .toolbar-group {
 	margin-bottom: 15px;
 }
@@ -1843,12 +1828,28 @@ ease
 	float: left;
 }
 
-.toolbar .iframe-list .toolbar-group .iframe-toolbar-group-trigger .checkbox
+.toolbar .iframe-list .toolbar-group .iframe-toolbar-group-trigger-border
 	{
+	width: 100%;
+	height: 30px;
+	line-height: 28px;
+	color: #ddd;
+	font-size: 11px;
+	iframe-transform: uppercase;
+	cursor: pointer;
+	clear: both;
+}
+
+.toolbar .iframe-list .toolbar-group .iframe-toolbar-group-trigger-border .label
+	{
+	float: left;
+}
+
+.toolbar .iframe-list .iframe-checkbox {
 	position: relative;
 	width: 16px;
 	height: 16px;
-	top: 6px;
+	top: 0px;
 	border: 1px solid #555;
 	iframe-align: center;
 	font-size: 14px;
@@ -1857,7 +1858,24 @@ ease
 	color: rgba(0, 0, 0, 0);
 }
 
-.toolbar .iframe-list .toolbar-group .iframe-toolbar-group-options {
+.toolbar .iframe-list .toolbar-group .iframe-toolbar-group-trigger-link {
+	width: 100%;
+	height: 30px;
+	line-height: 28px;
+	color: #ddd;
+	font-size: 11px;
+	iframe-transform: uppercase;
+	cursor: pointer;
+	clear: both;
+}
+
+.toolbar .iframe-list .toolbar-group .iframe-toolbar-group-trigger-link .label
+	{
+	float: left;
+}
+
+.toolbar .iframe-list .toolbar-group .iframe-toolbar-group-options-border
+	{
 	height: 0px;
 	position: relative;
 	background: #3f3f3f;
@@ -1870,8 +1888,20 @@ ease
 	transition: all 0.3s cubic-bezier(0.3, 0.9, 0.135, 1);
 }
 
-.toolbar .iframe-list .toolbar-group .iframe-toolbar-group-options-inner
-	{
+.toolbar .iframe-list .toolbar-group .iframe-toolbar-group-options-link {
+	height: 0px;
+	position: relative;
+	background: #3f3f3f;
+	margin-left: -12px;
+	width: 168px;
+	visibility: hidden;
+	overflow: hidden;
+	opacity: 0;
+	-webkit-transition: all 0.3s cubic-bezier(0.3, 0.9, 0.135, 1);
+	transition: all 0.3s cubic-bezier(0.3, 0.9, 0.135, 1);
+}
+
+.toolbar .iframe-list .toolbar-group .iframe-toolbar-group-options-inner {
 	border-top: 1px solid #292929;
 	border-bottom: 1px solid #292929;
 	padding: 12px 12px 0 12px;
@@ -1946,40 +1976,53 @@ ease
 
 .iframe-toolbar-panel {
 	position: absolute;
-	top: 395px;
-	left: 145px;
+	top: 5px;
+	left: 150px;
 	margin-left: 9px;
-	color: #ffffff;
-	background: #4e4e4e;
+	color: #222;
+	background-color: #eee;
 	font-size: 14px;
 	z-index: 2;
 	box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
-	width: 100px;
+	display: block;
+	overflow-y: auto;
 	visibility: hidden;
 }
 
-.iframe-toolbar-panel .iframe-toolbar-select-item1 {
-	min-height: 30px;
-	line-height: 28px;
-	padding: 0 10px;
+.iframe-toolbar-panel .toolbar-panel-content {
+	overflow: auto;
+	padding: 1px;
+	-webkit-overflow-scrolling: touch;
+}
+
+.iframe-toolbar-panel .toolbar-select-item {
+	display: inline-block;
+	width: 23%;
+	height: 61px;
+	padding: 14px;
 	cursor: pointer;
 	border: 1px solid transparent;
 }
 
-.iframe-toolbar-panel .iframe-toolbar-select-item2 {
-	min-height: 30px;
-	line-height: 28px;
-	padding: 0 10px;
+/* .iframe-toolbar-panel .toolbar-select-item.selected {
+	display: inline-block;
+	width: 24px;
+	height: 31px;
+	margin: 10px;
+	padding: 14px;
 	cursor: pointer;
 	border: 1px solid transparent;
-}
+} */
 
-.iframe-toolbar-panel .iframe-toolbar-select-item3 {
-	min-height: 30px;
-	line-height: 28px;
-	padding: 0 10px;
+.iframe-list .toolbar-select-trigger {
+	width: 100%;
+	height: auto;
+	padding: 15px;
+	line-height: 1;
+	text-align: center;
+	background-color: #444;
+	background-image: #444;
 	cursor: pointer;
-	border: 1px solid transparent;
 }
 
 /* math */
