--- a/web4test/src/main/webapp/pro/css/Edit.css
+++ b/web4test/src/main/webapp/pro/css/Edit.css
@@ -2025,6 +2025,13 @@ ease
 	cursor: pointer;
 }
 
+
+textarea.toolbar-text-input {
+  width : 140px;
+  height: 90px;
+  resize: none;
+  color : black;
+}
 /* math */
 .toolbar . math-list .toolbar-group .text-toolbar-group-trigger .checkbox
 	{
