--- a/web4test/src/main/webapp/protoMypage/TooltipMenu/css/default.css
+++ b/web4test/src/main/webapp/protoMypage/TooltipMenu/css/default.css
@@ -20,7 +20,7 @@ body, html { font-size: 100%; padding: 0; margin: 0; height: 100%;}
 
 body {
     font-family: 'Lato', Calibri, Arial, sans-serif;
-    color: #47a3da;
+    color: #47424A
 }
 
 a {
@@ -111,7 +111,7 @@ a:hover {
 	margin-left: 4px;
 	position: absolute;
 	color: #fff;
-	background: #47a3da;
+	background: #47424A;
 }
 
 .containerHead > header nav {
@@ -128,7 +128,7 @@ a:hover {
 	background: #fff;
 	border-radius: 50%;
 	margin: 0 0.1em;
-	border: 4px solid #47a3da;
+	border: 4px solid #47424A;
 }
 
 .containerHead > header nav a > span {
@@ -137,7 +137,7 @@ a:hover {
 
 .containerHead > header nav a:hover:before {
 	content: attr(data-info);
-	color: #47a3da;
+	color: #47424A;
 	position: absolute;
 	width: 600%;
 	top: 120%;
@@ -147,7 +147,7 @@ a:hover {
 }
 
 .containerHead > header nav a:hover {
-	background: #47a3da;
+	background: #47424A;
 }
 
 .bp-icon:after {
@@ -158,7 +158,7 @@ a:hover {
 	font-variant: normal;
 	text-transform: none;
 	text-align: center;
-	color: #47a3da;
+	color: #47424A;
 	-webkit-font-smoothing: antialiased;
 }
 
