--- a/web4test/src/main/webapp/protoMypage/css/mypage-list.css
+++ b/web4test/src/main/webapp/protoMypage/css/mypage-list.css
@@ -9,8 +9,9 @@ ul {
 	width : 100%;
 	height : 180px;
 	color : #47424A;
-	background-color : #F5F3AC;
-	
+	background-color: #F1F1E7;
+/* 	background-color : #F5F3AC;
+ */	
 }
 
 .canvasIn.preThumbnail{
@@ -20,7 +21,7 @@ ul {
 	position : relative;
  	float : left;
  	height : 160px <!--임시 값-->
-}
+}   
 .canvasIn.preThumbnail img{
     height : 160px;
     width : 100%;	
@@ -28,14 +29,14 @@ ul {
 }
 .canvasIn.canvasInfo {	
 	float : left;
-	border : 1px solid blue;
-	margin : 5px 5px 5px 15px;
+/* 	border : 1px solid blue;
+ */	margin : 5px 5px 5px 15px;
 	width : 65%;
 	height : 160px;
 }
 .canvasIn.Title{
-	border : 1px solid black;
-    width : 95%;
+/* 	border : 1px solid black;
+ */    width : 95%;
     height : 90px;
     position : relative;
     margin : 5px auto;  /* 위 아래는 5px씩 주고 왼/오른쪽은 가운데 정렬 */    
@@ -43,8 +44,8 @@ ul {
 
 
 .canvasIn.TitleInner.prename {
-	border : 1px solid #bc50f4;
-	display : inline-block;
+/* 	border : 1px solid #bc50f4;
+ */	display : inline-block;
 	width : 100%;
 	height : 80px;
 	margin : 5px auto;
@@ -56,16 +57,15 @@ ul {
 
 
 .canvasIn.Tool{
-	border : 1px solid green;
-    width : 95%;
+/* 	border : 1px solid green;
+ */    width : 95%;
     height : 55px;
     position : relative;
     margin : 5px auto;  /* 위 아래는 5px씩 주고 왼/오른쪽은 가운데 정렬 */ 
 }
 
 .canvasIn.Tool .create_date{
-	border : 1px solid yellow; 
-	position : relative;
+ 	position : relative;
 	display : inline-block;
 	margin : 5px 15px 5px 15px;
 	height : 45px;
@@ -73,9 +73,19 @@ ul {
 	line-height : 45px;
 
 }
+
+.canvasIn.Tool .shareInfo{
+    position : relative;
+    display : inline-block;
+    margin : 5px 15px 5px 15px;
+    height : 45px;
+    width : 65%;
+    line-height : 45px;
+
+}
 .canvasIn.Tool .useTool{
-	border : 1px solid red;
-	position : relative;
+/*  	border : 1px solid red;
+ */ 	position : relative;
     display : inline-block;
     height : 45px;
     width : 23%;
@@ -84,10 +94,10 @@ ul {
     padding : 0px 5px 0px 8px;
 }
 
-.canvasIn.useTool span{
+.canvasIn.Tool span{
 	margin : 10px 5px 10px 10px;
-	font-size : 35px;
-	line-height : 43px;
+	font-size : 30px;
+	line-height : 45px;
 	width : 30px;
 }
 
