qna페이지 css 적용(contact us 부분 아이콘만 수정하면 될듯)

--- a/web4test/src/main/webapp/protoQna/css/default.css
+++ b/web4test/src/main/webapp/protoQna/css/default.css
@@ -37,7 +37,8 @@ body, html { font-size: 100%; 	padding: 0; margin: 0;}
 body {
     font-family: 'Lato', Calibri, Arial, sans-serif;
     color: #47a3da;
-
+    background-color: #F2F1E7;
+ /*  전체 바탕화면*/
 }
 
 a {
