--- a/web4test/src/main/webapp/protoQna/css/component.css
+++ b/web4test/src/main/webapp/protoQna/css/component.css
@@ -14,7 +14,7 @@
 /* Accordion style */
 .cbp-ntaccordion {
 	list-style: none;
-	margin: 0;
+	margin: 150px 0px;
 	padding: 0;
 }
 
@@ -30,8 +30,9 @@
 	margin: 0 0 0.3em;
 	padding: 1em 0 0.5em;
 	border-bottom: 1px solid #ddd;
-	font-size: 2.75em;
+	font-size: 2em;
 	font-weight: 300;
+	color : #47424A;
 }
 
 .cbp-ntaccordion h4 {
