edit css 섹션딜리트 초기값 변

--- a/web4test/src/main/webapp/pro/css/Edit.css
+++ b/web4test/src/main/webapp/pro/css/Edit.css
@@ -278,7 +278,8 @@ div.canvas {
 	right: 40px;
 	width: 50px;
 	heigh: 50px;
-	visibility: visible;
+	visibility: hidden;
+	display : none;
 	position: absolute;
 	z-index: 100;
 	cursor: pointer;
