--- a/web4test/src/main/webapp/firstpage/TooltipMenu/css/component.css
+++ b/web4test/src/main/webapp/firstpage/TooltipMenu/css/component.css
@@ -25,7 +25,7 @@
 	z-index: 1000;
 	bottom: 0;
 	width: 100%;
-	background: #9ECDB1; 
+	background: #007EbF; 
 	text-align: right;
 	padding: 0 2em;
 	margin: 0;
