--- a/web4test/src/main/webapp/firstpage/css/final.css
+++ b/web4test/src/main/webapp/firstpage/css/final.css
@@ -1,30 +1,45 @@
+@font-face {
+  font-family: 'Nanum Pen Script';
+  font-style: normal;
+  font-weight: 400;
+  src: url(//fonts.gstatic.com/ea/nanumpenscript/v4/NanumPenScript-Regular.eot);
+  src: url(//fonts.gstatic.com/ea/nanumpenscript/v4/NanumPenScript-Regular.eot?#iefix) format('embedded-opentype'),
+       url(//fonts.gstatic.com/ea/nanumpenscript/v4/NanumPenScript-Regular.woff2) format('woff2'),
+       url(//fonts.gstatic.com/ea/nanumpenscript/v4/NanumPenScript-Regular.woff) format('woff'),
+       url(//fonts.gstatic.com/ea/nanumpenscript/v4/NanumPenScript-Regular.ttf) format('truetype');
+}
+
 .ss-right.loginBtn{
       position: relative;
       right : 0%;
       top : 10px;
-	  width : 100px;
+	  width : 150px;
 	  height : 50px;
 	  padding : 0px;
 }
 
 .ss-right.loginBtn .naverBtn{
 	display: inline-block; 
-	width: 10px; 
-	height: 10px; 
+	width : 100;
+	height : 100;
 	padding: 0px;
+	width: 30px; 
+	height: 30px; 
+	margin : 0px;
 }
 
-.ss-right.loginBtn .naverBtn img{
-    width: 10px; 
-    height: 10px;
-	}
+ .ss-right.loginBtn .naverBtn img{
+    width:  100%; 
+    height: 100%;
+    
+	} 
 	
 .ss-right.loginBtn .facebookBtn{
 	 display: inline-block; 
 	 width: 10px; 
 	 height: 10px; 
-	 padding: 0px;
-	 margin : 20px;
+	 padding: auto;
+	 margin : 15px;
 	 cursor : pointer
 }	
 	
@@ -42,6 +57,7 @@
 	width: 10px; 
 	height: 10px; 
 	padding: 0px;
+	margin : 20px;
 	cursor : pointer
 }
 
@@ -65,4 +81,56 @@
      padding: 0px;
 	}
 	
-	
+#ss-links{ 
+	top : 150px;
+	color : #fd4444;
+}
+
+#ss-links i{
+	color : white;
+}
+
+#ss-links a{
+	color : white;
+}
+
+ .ss-row .ss-left .mainTitle .main{
+   font-family: 'Nanum Pen Script';
+    font-size : 100px;
+    position : relative;
+    top : 150px;
+	color : #fde903;
+	font-weight: bold;
+	text-shadow: 0 0 70px #000000;
+    -moz-text-shadow: 0 0 12px #000000;
+    -webkit-text-shadow: 0 0 12px #000000;
+}
+
+.ss-row .ss-left .mainTitle span{
+	position : relative;
+	top : 130px;
+	color : #fde903;
+	font-family: 'Nanum Pen Script';
+	font-size :  50px;
+	font-weight : bold;
+	text-shadow: 0 0 12px #000000;
+    -moz-text-shadow: 0 0 12px #000000;
+    -webkit-text-shadow: 0 0 12px #000000;
+}
+.ss-container h3 a.smallTitle{
+	color: #fde903; 
+	font-weight : bold;
+	height: 50px; 
+	font-family: 'Comic Sans MS';
+}
+
+.ss-container h3 a.content{
+	font-family: '휴먼엽서체'";
+	padding : 0 0 0 30px;
+}
+
+.ss-container h3 a.contentV{
+	-container h3 a.content{
+    font-family: '휴먼엽서체'";
+    padding : 0 0 0 0px;
+}
