--- a/web4test/src/main/webapp/tryMypage/TooltipMenu/css/component.css
+++ b/web4test/src/main/webapp/tryMypage/TooltipMenu/css/component.css
@@ -28,7 +28,7 @@ body {
 	z-index: 1000;
 	bottom: 0;
 	width: 100%;
-	background: #9ECDB1; 
+	background: #007EBF; 
 	text-align: right;
 	padding: 0 2em;
 	margin: 0;
